# net

./: .clang-tidy  .gitignore  .gitpod.Dockerfile  .travis.yml  CMakeLists.txt  README.md  codecov.yml  meson.build  meson.sh  meson_options.txt
example/: meson.build
example/simple/: client.c  meson.build  server.c
include/net/: client.h  error.h  net.h  request.h  response.h  server.h  util.h  version.in.h
lib/: net.c  net_socket.c  platform.h  setup.c
lib/platform/: linux.c  platform.c  posix.c
lib/platform/linux/: linux.c  linux.h
lib/request/: request.c
lib/response/: response.c
test/: meson.build
test/aio/: forked.c  meson.build  threaded.c
test/basic/: main.c  meson.build
test/net/: address.c  address_type.c  cleanup.c  close.c  close_connection.c  connect.c  get_address.c  get_address_type.c  get_handler.c  get_port.c  handler.c  handler.h  loop.c  meson.build  method.h  parameters.c  port.c  receive.c  receive_text.c  send.c  set_address.c  set_address_type.c  set_handler.c  set_port.c  setup.c  socket.c  socket.h  start.c
test/posix/: close.c  close_connection.c  connect.c  initialize.c  loop.c  meson.build  method.h  receive.c  send.c
test/posix/connect/: in_use.c  incorrect_side.c  meson.build  null_data.c  null_socket.c  success.c  tests.h
test/posix/loop/: meson.build  test.h
test/posix/loop/error/: again.c  badf.c  conn_aborted.c  fault.c  intr.c  inval.c  meson.build  mfile.c  nfile.c  nobufs.c  nomem.c  not_sock.c  op_not_supp.c  proto.c  would_block.c
test/posix/setupSocket/: close_error.c  invalid_ip.c  meson.build  success.c  tcp_client_ipv4.c  tcp_client_ipv6.c  tcp_server_ipv4.c  tcp_server_ipv6.c  test.h  udp_client_ipv4.c  udp_client_ipv6.c  udp_server_ipv4.c  udp_server_ipv6.c
test/posix/setupSocket/error/: again.c  bad_flags.c  fail.c  family.c  memory.c  meson.build  noname.c  service.c  socktype.c  system.c
test/posix/start/: in_use.c  incorrect_side.c  meson.build  null_data.c  null_socket.c  success.c  tests.h
