if has_criterion
    args = ['--verbose', '-j1']

    test_files += {'name': 'handler', 'type': 'criterion', 'args': args, 'src': files('handler.c')}
    test_files += {'name': 'setup', 'type': 'criterion', 'args': args, 'src': files('setup.c')}
    test_files += {'name': 'parameters', 'type': 'criterion', 'args': args, 'src': files('parameters.c')}
endif
