if has_criterion
    args = ['--verbose', '-j1']

    test_files += {'name': 'c-handler', 'type': 'criterion', 'args': args, 'src': files('handler.c')}
    test_files += {'name': 'c-setup', 'type': 'criterion', 'args': args, 'src': files('setup.c')}
    test_files += {'name': 'c-address', 'type': 'criterion', 'args': args, 'src': files('address.c')}
    test_files += {'name': 'c-address-type', 'type': 'criterion', 'args': args, 'src': files('address_type.c')}
    test_files += {'name': 'c-port', 'type': 'criterion', 'args': args, 'src': files('port.c')}
endif
