if has_criterion
    args = ['--verbose']

    test_files += {'name': 'c-handler', 'type': 'criterion', 'args': args, 'src': files('handler.c')}
    test_files += {'name': 'c-setup', 'type': 'criterion', 'args': args, 'src': files('setup.c')}

    test_files += {'name': 'c-socket', 'type': 'criterion', 'args': args, 'src': files('socket.c')}
    test_files += {'name': 'c-address', 'type': 'criterion', 'args': args, 'src': files('address.c')}
    test_files += {'name': 'c-address-type', 'type': 'criterion', 'args': args, 'src': files('address_type.c')}
    test_files += {'name': 'c-port', 'type': 'criterion', 'args': args, 'src': files('port.c')}

    test_files += {'name': 'c-connect', 'type': 'criterion', 'args': args, 'src': files('connect.c')}
    test_files += {'name': 'c-start', 'type': 'criterion', 'args': args, 'src': files('start.c')}
    test_files += {'name': 'c-loop', 'type': 'criterion', 'args': args, 'src': files('loop.c')}
    test_files += {'name': 'c-close-connection', 'type': 'criterion', 'args': args, 'src': files('close_connection.c')}
endif
