test_files += {'name': 'posix-connect-null-socket', 'src': files('null_socket.c')}
test_files += {'name': 'posix-connect-null-data', 'src': files('null_data.c')}
test_files += {'name': 'posix-connect-incorrect-side', 'src': files('incorrect_side.c')}
test_files += {'name': 'posix-connect-in-use', 'src': files('in_use.c')}

test_files += {'name': 'posix-connect-success', 'src': files('success.c')}
