test_files += {'name': 'posix-setup-socket-tcp-client-ipv4', 'src': files('tcp_client_ipv4.c')}
test_files += {'name': 'posix-setup-socket-tcp-client-ipv6', 'src': files('tcp_client_ipv6.c')}
test_files += {'name': 'posix-setup-socket-tcp-server-ipv4', 'src': files('tcp_server_ipv4.c')}
test_files += {'name': 'posix-setup-socket-tcp-server-ipv6', 'src': files('tcp_server_ipv6.c')}
test_files += {'name': 'posix-setup-socket-udp-client-ipv4', 'src': files('udp_client_ipv4.c')}
test_files += {'name': 'posix-setup-socket-udp-client-ipv6', 'src': files('udp_client_ipv6.c')}
test_files += {'name': 'posix-setup-socket-udp-server-ipv4', 'src': files('udp_server_ipv4.c')}
test_files += {'name': 'posix-setup-socket-udp-server-ipv6', 'src': files('udp_server_ipv6.c')}

subdir('error')
