test_files += {'name': 'posix-start-null-socket', 'src': files('null_socket.c')}
test_files += {'name': 'posix-start-null-data', 'src': files('null_data.c')}
test_files += {'name': 'posix-start-incorrect-side', 'src': files('incorrect_side.c')}
test_files += {'name': 'posix-start-in-use', 'src': files('in_use.c')}
