test_files += {'name': 'posix-setup-socket-error-bad-flags', 'src': files('bad_flags.c')}
test_files += {'name': 'posix-setup-socket-error-fail', 'src': files('fail.c')}
test_files += {'name': 'posix-setup-socket-error-family', 'src': files('family.c')}
test_files += {'name': 'posix-setup-socket-error-noname', 'src': files('noname.c')}
test_files += {'name': 'posix-setup-socket-error-socktype', 'src': files('socktype.c')}

test_files += {'name': 'posix-setup-socket-error-again', 'src': files('again.c')}
test_files += {'name': 'posix-setup-socket-error-memory', 'src': files('memory.c')}
test_files += {'name': 'posix-setup-socket-error-service', 'src': files('service.c')}
test_files += {'name': 'posix-setup-socket-error-system', 'src': files('system.c')}
